--- a/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
@@ -1,17 +1,23 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.MeasureEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:editors="clr-namespace:Diagnosis.App.Controls.Editors"
         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
         xmlns:ex="clr-namespace:Xceed.Wpf.Toolkit;assembly=Xceed.Wpf.Toolkit"
         xmlns:diag="http://schemas.smg.com/diagnosis"
         Title="{Binding Title}"
         SizeToContent="Height"
-        Width="400"
-        MinWidth="200"
+        Width="450"
+        MinWidth="300"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         ResizeMode="NoResize"
         ShowInTaskbar="False"
+        mc:Ignorable="d"
+        d:DataContext="{d:DesignInstance diag:SampleMeasureEditorViewModel,
+                                         IsDesignTimeCreatable=False}"
         UseLayoutRounding="True">
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
@@ -42,14 +48,14 @@
             <Label Content="Что"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Top" />
-            <search:Autocomplete x:Name="autocomplete"
-                                 DataContext="{Binding Autocomplete}"
-                                 Grid.Row="1" />
-
             <Label Content="Сколько"
                    Grid.Column="2"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Top" />
+            <search:Autocomplete x:Name="autocomplete"
+                                 DataContext="{Binding Autocomplete}"
+                                 Grid.Row="1" />
+
             <Grid Grid.Row="1"
                   Grid.Column="2"
                   VerticalAlignment="Top">
@@ -60,18 +66,27 @@
                 </Grid.ColumnDefinitions>
 
                 <TextBox x:Name="value"
-                         Text="{Binding Value, Mode=TwoWay, ValidatesOnDataErrors=True}"
+                         Text="{Binding Value,
+                                        Mode=TwoWay,
+                                        ValidatesOnDataErrors=True}"
+                         HorizontalContentAlignment="Right"
                          VerticalContentAlignment="Top" />
                 <ComboBox x:Name="uom"
-                          SelectedItem="{Binding Uom, ValidatesOnDataErrors=True}"
+                          SelectedItem="{Binding Uom,
+                                                 ValidatesOnDataErrors=True}"
                           IsEditable="True"
-                          ItemsSource="{Binding Uoms}"
+                          ItemsSource="{Binding Uoms}"                          
+                          TextSearch.TextPath="Abbr"
                           Grid.Column="2">
                     <ComboBox.GroupStyle>
                         <GroupStyle>
                             <GroupStyle.HeaderTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Name}" />
+                                    <TextBlock>
+                                        <TextBlock Text="{Binding Name.Title, StringFormat={}{0}}" />
+                                        <!--<TextBlock Text="{Binding Name.Base.Abbr, StringFormat={}({0})}"
+                                                   FontStyle="Italic" />-->
+                                    </TextBlock>
                                 </DataTemplate>
                             </GroupStyle.HeaderTemplate>
                         </GroupStyle>
@@ -84,10 +99,14 @@
                     Style="{StaticResource DialogButtonsPanel}">
             <Button Name="saveButton"
                     IsDefault="True"
-                    Command="{Binding OkCommand}">Сохранить</Button>
+                    Command="{Binding OkCommand}">
+                Сохранить
+            </Button>
             <Button Name="cancelButton"
                     IsCancel="True"
-                    Command="{Binding CancelCommand}">Отмена</Button>
+                    Command="{Binding CancelCommand}">
+                Отмена
+            </Button>
         </StackPanel>
     </Grid>
 </Window>
