--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -17,7 +17,10 @@
             <!--<MenuItem Header="_Справочники">-->
             <MenuItem Command="{Binding OpenWordsCommand}"
                       Header="_Словарь" />
-
+            <MenuItem Command="{Binding OpenSyncCommand}"
+                      Visibility="{Binding OpenSyncCommand.IsVisible, Converter={StaticResource BooleanToVisibilityConverter}}"
+                      Header="С_инхронизация" />
+            
             <MenuItem x:Name="view"
                       Header="_Вид">
                 <MenuItem IsCheckable="true"
