--- a/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
+++ b/Diagnosis.App/Controls/CardParts/HealthRecordsList.xaml
@@ -368,6 +368,9 @@
                             <Setter.Value>
                                 <ContextMenu>
                                     <!-- ShortHr -->
+                                    <MenuItem Header="Изменить"
+                                              TextElement.FontWeight="Bold"
+                                              Command="{Binding EditCommand}" />
                                     <MenuItem Header="Показать редактор"
                                               InputGestureText="F2"
                                               Command="{Binding OpenCommand}" />
