--- a/Diagnosis.App/Screens/Words.xaml
+++ b/Diagnosis.App/Screens/Words.xaml
@@ -108,7 +108,7 @@
                         <Setter.Value>
                             <ContextMenu>
                                 <!--WordsViewModel-->
-                                <MenuItem Header="Редактировать"
+                                <MenuItem Header="Изменить"
                                           InputGestureText="F2"
                                           Command="{Binding EditCommand}" />
                                 <!--WordsListViewModel-->
