--- a/Diagnosis.App/Controls/CardParts/Header.xaml
+++ b/Diagnosis.App/Controls/CardParts/Header.xaml
@@ -66,7 +66,7 @@
                         <Button Height="26"
                                 Width="26"
                                 Command="{Binding HolderVm.EditCommand}"
-                                ToolTip="Редактировать"
+                                ToolTip="Изменить"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Top"
                                 Grid.RowSpan="2">
