--- a/Diagnosis.ServerApp/Screens/Uoms.xaml
+++ b/Diagnosis.ServerApp/Screens/Uoms.xaml
@@ -115,7 +115,7 @@
                     <!--<Setter Property="ContextMenu">
                         <Setter.Value>
                             <ContextMenu>
-                                <MenuItem Header="Редактировать"
+                                <MenuItem Header="Изменить"
                                           InputGestureText="F2"
                                           Command="{Binding EditCommand}" />
                                 
