patients. Copy fio from filter or selected patient when add new

--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -181,7 +181,7 @@
                 <ContextMenu>
                     <MenuItem Header="Новый..."
                               InputGestureText="Ctrl+Enter"
-                              Command="{Binding AddHealthRecordCommand}" />
+                              Command="{Binding AddCommand}" />
                 </ContextMenu>
             </DataGrid.ContextMenu>
         </DataGrid>
